# juno_bridge

./: .env  Cargo.toml  Readme.md  docker-compose.yml
migrations/2022-05-16-144050_create_contracts/: down.sql  up.sql
migrations/2022-05-16-192922_create_config/: up.sql
migrations/2022-05-24-120615_create_transfers/: down.sql  up.sql
src/: error.rs  lib.rs  models.rs  repository.rs  schema.rs  service.rs
src/repository/: config.rs  contract.rs  transfer.rs
src/service/: config.rs  contract.rs  juno_lcd.rs  transfer.rs
