[package]
name = "contract-watcher"
version = "0.1.0"
edition = "2021"

[dependencies]
diesel = { version = "1.4.4", features = ["postgres"] }
dotenv = "0.15.0"
log = "0.4.17"
env_logger = "0.9.0"
thiserror = { version = "1.0" }
clap = { version = "3.1.18", features = ["derive"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = "1.0.81"
reqwest = { version = "0.11", features = ["blocking", "json"] }
cronjob = "0.4.17"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


